<resources>
    <string name="app_name">Tests</string>
    <string name="welcome">Welcome</string>
    <string name="hello">Hello</string>
    <string name="register">Register</string>
    <string name="connect">connect</string>
    <string name="field_is_empty">Field is empty!</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="incorrect_password_confirm">Incorrect password confirmation!</string>
    <string name="incorrect_data">Incorrect login or password!</string>
    <string name="submit">submit</string>
    <string name="login_used">This login has been used!</string>
    <string name="title">Title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_edit">Edit User</string>
    <string name="user_role">User Role</string>

    <string-array name="user_roles">
        <item>Admin</item>
        <item>Manager</item>
        <item>User</item>
    </string-array>
</resources>