<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.onix.internship.survay.ui.roles.admin.edit_user.EditUserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.roles.admin.edit_user.EditUserFragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/toolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/user_edit" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextFirstNameContainer"
            style="@style/Widget.Design.TextInputLayout"
            errorMessage="@{viewModel.errorFirstName}"
            android:layout_width="@dimen/fill_space"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginEnd="@dimen/little_margin"
            app:layout_constraintEnd_toStartOf="@+id/editTextLastNameContainer"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextFirstName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:hint="@string/first_name"
                android:inputType="textCapSentences"
                android:nextFocusDown="@+id/editTextLastName"
                android:singleLine="true"
                android:text="@={viewModel.user.firstName}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextLastNameContainer"
            style="@style/Widget.Design.TextInputLayout"
            errorMessage="@{viewModel.errorLastName}"
            android:layout_width="@dimen/fill_space"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginEnd="@dimen/margin_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editTextFirstNameContainer"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextLastName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:hint="@string/last_name"
                android:inputType="textCapSentences"
                android:singleLine="true"
                android:text="@={viewModel.user.lastName}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextLoginContainer"
            style="@style/Widget.Design.TextInputLayout"
            errorMessage="@{viewModel.errorLogin}"
            android:layout_width="@dimen/fill_space"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:layout_marginTop="@dimen/margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextFirstNameContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:hint="@string/login"
                android:inputType="textCapSentences"
                android:singleLine="true"
                android:text="@={viewModel.user.login}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/userDetailsRole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:tooltipText="@string/user_role"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextLoginContainer" />


        <androidx.appcompat.widget.AppCompatButton
            style="@style/greenButtonStyle"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@color/green"
            android:onClick="@{() -> viewModel.onSave()}"
            android:text="@string/submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userDetailsRole" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>